Agregue suscripcion, cambie a color azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
                     Excepto si eres un rockstar. 
                     Pero estadisticamente no lo eres... por ahora.
                 </p>
+                <p>suscribete</p>
             </div>
         </div>
     </body>
