--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,7 @@
                 </p>
                 <p>suscribete</p>
             </div>
+            <div id="footer">Hecho con amor </div>
         </div>
     </body>
 </html>
