--- a/blogpost.html
+++ b/blogpost.html
@@ -12,8 +12,8 @@
             </div>
             <div id="post">
                 <h1>Este es eñ titulo atrativo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos 
-                    a explicar las cosas increibles que se 
+                <p>Y este es el párrafo de inicio donde vamos 
+                    a explicar las cosas increíbles que se 
                     pueden hacer con ramas</p>
                 <p>
                     Los blogs son la mejor forma de compartir 
