Cambio de titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenidos a hyperblog 2.0</title>
+        <title>Bienvenidos a hyperblog 2.0 esto es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
