agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,7 @@
                     Excepto si eres un rockstar. 
                     Pero estadisticamente no lo eres... por ahora.
                 </p>
+                <p><img src="imagenes/aaa.jpg" width="100%"</p>
                 <p>suscribete</p>
             </div>
             <div id="footer">Hecho con amor </div>
