Cambio de color y titulo :)

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/space.png"/>
                 Hyperblog 
-                <span id="tagline"> Tu blog de cabecera</span>
+                <span id="tagline"> Tu blog de Confianza</span>
             </div>
             <div id="post">
                 <h1>Este es eñ titulo atrativo e interesante del post</h1>
